Edit gambar menjadi file size kecil

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
                </section>
      
                <ul>
-                    <li><a href="">Home</a></li>
-                    <li><a href="">Menu</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="menu.html">Menu</a></li>
                     <li><a href="">Our Story</a></li>
                     <li><a href="">Login</a></li>
                </ul>
