Memperbaruhi fitur img peringatan untuk device mobile

--- a/index.html
+++ b/index.html
@@ -162,6 +162,9 @@
           </aside>
      </footer>
 
+     <!-- Sweetalert -->
+     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
+
      <!-- GSAP -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
 
