--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>Home</title>
-     <link rel="stylesheet" href="style/desktop.css">
-     <link rel="stylesheet" href="style/mobile.css">
+     <link rel="stylesheet" href="style/desktop1.css">
+     <link rel="stylesheet" href="style/mobile1.css">
      <link rel="shortcut icon" href="img/icon/logo/logo.png">
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
@@ -173,7 +173,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/debug.addIndicators.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/animation.gsap.js"></script>
 
-    <script src="script/script.js"></script>
-    <script src="script/animatePlugin.js"></script>
+    <script src="script/script1.js"></script>
+    <script src="script/animatePlugin1.js"></script>
 </body>
 </html>
