--- a/menu.html
+++ b/menu.html
@@ -5,8 +5,10 @@
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>Menu</title>
-     <link rel="stylesheet" href="style/desktop.css">
-     <link rel="stylesheet" href="style/mobile.css">
+     <link rel="stylesheet" href="style/desktop1.css">
+     <link rel="stylesheet" href="style/desktop2.css">
+     <link rel="stylesheet" href="style/mobile1.css">
+     <link rel="stylesheet" href="style/mobile2.css">
      <link rel="shortcut icon" href="img/icon/logo/logo.png">
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
@@ -38,16 +40,41 @@
 
           <!-- Main -->
           <main>
-               <section id="sectionMain">
-                    <p>INI WAKTU YANG BAIK UNTUK RASA BURGER YANG HEBAT</p>
-                    <h1>BURGER <span>WEEK</span></h1>
-               </section>
-               <section>
+               <aside>
                     <img src="img/real/header2.png" alt="home" id="imgHeader">
-               </section>
+               </aside>
+               <aside>
+                    <h2>Rasakan Sensasi Burger Terenak</h2>
+                    <section>
+                         <button>Order Sekarang</button>
+                         <button>Lihat Menu</button>
+                    </section>
+               </aside>
           </main>
+     </header>
 
-
+     <main id="container5">
+          <section>
+               <img src="img/icon/allMenu1.png" alt="menu">
+               <p>All</p>
+          </section>
+          <section>
+               <img src="img/icon/hamburger1.png" alt="hamb">
+               <p>Burger</p>
+          </section>
+          <section>
+               <img src="img/icon/chicken1.png" alt="chicken1">
+               <p>Chicken</p>
+          </section>
+          <section>
+               <img src="img/icon/fries1.png" alt="fries1">
+               <p>Fries</p>
+          </section>
+          <section>
+               <img src="img/icon/drink1.png" alt="drink1">
+               <p>Drink</p>
+          </section>
+     </main>
 
           <!-- GSAP -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
@@ -57,7 +84,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/debug.addIndicators.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/animation.gsap.js"></script>
 
-    <script src="script/script.js"></script>
-    <script src="script/animatePlugin.js"></script>
+    <script src="script/script2.js"></script>
+    <script src="script/animatePlugin1.js"></script>
+    <script src="script/animatePlugin2.js"></script>
 </body>
 </html>
