Mengedit file gambar menu

--- a/menu.html
+++ b/menu.html
@@ -76,6 +76,19 @@
           </section>
      </main>
 
+     <main id="container6">
+          <section>
+               <div>
+                    <img src="img/menu/1.png" alt="">
+               </div>
+               <div>
+                    
+               </div>
+          </section>
+          <section></section>
+          <section></section>
+     </main>
+
           <!-- GSAP -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
 
