--- a/menu.html
+++ b/menu.html
@@ -47,7 +47,7 @@
                     <h2>Rasakan Sensasi Burger Terenak</h2>
                     <section>
                          <button>Order Sekarang</button>
-                         <button>Lihat Menu</button>
+                         <a href="#container5"><button>Lihat Menu</button></a>
                     </section>
                </aside>
           </main>
@@ -79,14 +79,104 @@
      <main id="container6">
           <section>
                <div>
-                    <img src="img/menu/1.png" alt="">
+                    <img src="img/menu/19.png" alt="">
                </div>
                <div>
-                    
+                    <h3><b>Whooper burger</b></h3>
+
+                    <article>
+                         <aside>
+                              <img src="img/icon/star.png" alt="star">
+                              <img src="img/icon/star.png" alt="star">
+                              <img src="img/icon/star.png" alt="star">
+                         </aside>
+                         <p>Rp.-20.000</p>
+                    </article>
                </div>
           </section>
-          <section></section>
-          <section></section>
+          <section>
+               <div>
+                    <img src="img/menu/10.png" alt="">
+               </div>
+               <div>
+                    <h3><b>Fries</b></h3>
+
+                    <article>
+                         <aside>
+                              <img src="img/icon/star.png" alt="star">
+                              <img src="img/icon/star.png" alt="star">
+                         </aside>
+                         <p>Rp.-20.000</p>
+                    </article>
+               </div>
+          </section>
+          <section>
+               <div>
+                    <img src="img/menu/20.png" alt="">
+               </div>
+               <div>
+                    <h3><b>Double Whopper burger + Cheese</b></h3>
+
+                    <article>
+                         <aside>
+                              <img src="img/icon/star.png" alt="star">
+                              <img src="img/icon/star.png" alt="star">
+                              <img src="img/icon/star.png" alt="star">
+                         </aside>
+                         <p>Rp.-20.000</p>
+                    </article>
+               </div>
+          </section>
+          <section>
+               <div>
+                    <img src="img/menu/3.png" alt="">
+               </div>
+               <div>
+                    <h3><b>Cola-Cola</b></h3>
+
+                    <article>
+                         <aside>
+                              <img src="img/icon/star.png" alt="star">
+                              <img src="img/icon/star.png" alt="star">
+                         </aside>
+                         <p>Rp.-20.000</p>
+                    </article>
+               </div>
+          </section>
+          <section>
+               <div>
+                    <img src="img/menu/13.png" alt="">
+               </div>
+               <div>
+                    <h3><b>hash brown rounds'</b></h3>
+
+                    <article>
+                         <aside>
+                              <img src="img/icon/star.png" alt="star">
+                              <img src="img/icon/star.png" alt="star">
+                              <img src="img/icon/star.png" alt="star">
+                         </aside>
+                         <p>Rp.-20.000</p>
+                    </article>
+               </div>
+          </section>
+          <section>
+               <div>
+                    <img src="img/menu/6.png" alt="">
+               </div>
+               <div>
+                    <h3><b>croissan wich with sausage,cheese,egg</b></h3>
+
+                    <article>
+                         <aside>
+                              <img src="img/icon/star.png" alt="star">
+                              <img src="img/icon/star.png" alt="star">
+                              <img src="img/icon/star.png" alt="star">
+                         </aside>
+                         <p>Rp.-20.000</p>
+                    </article>
+               </div>
+          </section>
      </main>
 
           <!-- GSAP -->
