Menambahkan 80% project halaman menu

--- a/menu.html
+++ b/menu.html
@@ -179,6 +179,75 @@
           </section>
      </main>
 
+     <main id="container7">
+          <h1>SPECIAL DEALS</h1>
+          <div id="specialDealsContainer">
+               <section class="boxDeals">
+                    <article>
+                         <aside>
+                              <h3>Special Deals 1</h3>
+                              <div class="starContainerDeals">
+                                   <img src="img/icon/star.png" alt="star">
+                                   <img src="img/icon/star.png" alt="star">
+                                   <img src="img/icon/star.png" alt="star">
+                                   <img src="img/icon/star.png" alt="star">
+                                   <img src="img/icon/star.png" alt="star">
+                              </div>
+                              <div class="contentDeals">
+                                   <article>
+                                        <img src="img/icon/hamburger2.png" alt="hamb2">
+                                        <p>1 Hamburger Whooper.</p>
+                                   </article>
+                                   <article>
+                                        <img src="img/icon/soda2.png" alt="drink">
+                                        <p>1 Drink</p>
+                                   </article>
+                                   <article>
+                                        <img src="img/icon/fries2.png" alt="fries2">
+                                        <p>1 Friench</p>
+                                   </article>
+                              </div>
+                              <h4>Total : <span> Rp,-50.000 </span></h4>
+                         </aside>  
+                         <img src="img/menu/specialDeals2.png" alt="specialDeal1">
+                    </article>
+
+                    <button>Order Sekarang</button>
+               </section>
+
+               <section class="boxDeals">
+                    <article>
+                         <aside>
+                              <h3>Special Deals 2 (King Box)</h3>
+                              <div class="starContainerDeals">
+                                   <img src="img/icon/star.png" alt="star">
+                                   <img src="img/icon/star.png" alt="star">
+                                   <img src="img/icon/star.png" alt="star">
+                                   <img src="img/icon/star.png" alt="star">
+                              </div>
+                              <div class="contentDeals">
+                                   <article>
+                                        <img src="img/icon/hamburger2.png" alt="hamb2">
+                                        <p>1 Hamburger Double Cheese.</p>
+                                   </article>
+                                   <article>
+                                        <img src="img/icon/soda2.png" alt="drink">
+                                        <p>1 Drink</p>
+                                   </article>
+                                   <article>
+                                        <img src="img/icon/fries2.png" alt="fries2">
+                                        <p>1 Friench</p>
+                                   </article>
+                              </div>
+                              <h4>Total : <span> Rp,-50.000 </span></h4>
+                         </aside>  
+                         <img src="img/menu/specialDeals1.png" alt="specialDeal1">
+                    </article>
+
+                    <button>Order Sekarang</button>
+               </section>
+          </div>
+     </main>
           <!-- GSAP -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
 
