Menambahkan 100% project halaman menu UNTUK DESAIN

--- a/index.html
+++ b/index.html
@@ -74,25 +74,25 @@
      <main id="container2">
           <section>
                <h1>PILIH & NIKMATI</h1>
-               <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Necessitatibus, minima beatae in autem voluptatum suscipit. Consequatur eveniet, rerum necessitatibus laborum suscipit, accusamus delectus harum ad sint dignissimos doloribus! Voluptate, non.</p>
+               <p>Aneka burger dengan cita rasa yang sangat lezat dan nikmat mulai dari roti biji wijen panggang dengan tekstur yang lembut , daging sapi pilihan kualitas terbaik , keju dengan aroma dan rasa terbaik yang berasal dari Amerika , serta berbagai macam hidangan lainnya seperti kentang,ayam dan lain-lain yang berasal dari bahan-bahan kualitas terbaik yang pastinya tidak akan mengecewakan lidah anda.</p>
           </section>
           <section>
                <article>
                     <img src="img/real/displayBurger1.png" alt="1">
                     <h2><b>Burger Whopper Meal</b></h2>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam, ut.</p>
+                    <p>Burger dengan daging sapi panggang dan acar dibagian atasnya ditambah tomat dan selada segar serta mayonaise yang disajikan pada roti biji wijen panggang.</p>
                     <button>ORDER SEKARANG</button>
                </article>
                <article>
                     <img src="img/real/displayBurger2.png" alt="2">
                     <h2><b>Burger Cheese Meal</b></h2>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam, ut.</p>
+                    <p>Burger dengan daging sapi panggang , dipadukan dengan keju Amerika ditambah selada serta tomat segar yang dapat membuat rasa menjadi lebih lezat </p>
                     <button>ORDER SEKARANG</button>
                </article>
                <article>
                     <img src="img/real/displayBurger3.png" alt="3">
                     <h2><b>Burger Bacon Whopper</b></h2>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam, ut.</p>
+                    <p>Burger dengan daging sapi panggang yang diasapi,acar renyah,tomat matang,selada segar,mayonaise,keju leleh serta irisan bawang bombai yang dapat menambah cita rasa</p>
                     <button>ORDER SEKARANG</button>
                </article>
           </section>
@@ -102,7 +102,7 @@
           <section>
                <article>
                     <h1>ACARA MENDATANG</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error autem nemo eos. Consequatur voluptatem quia, accusantium cumque, quas deserunt totam excepturi quo eaque eius sunt? Error voluptatem provident culpa reiciendis odio consectetur quibusdam ad vitae, quod, veritatis ratione repellendus, dolorem quia? Quisquam quaerat, voluptate expedita fugit pariatur libero quo nemo.</p>
+                    <p>Dalam beberapa hari ke depan , kami akan memperingati hari jadi restoran kami yang ke -10 tahun.Pada hari tersebut kami akan memberikan diskon 30% serta gantungan kunci berbentuk burger gratis untuk setiap pembelian yang dilakukan di resto kami.Kami juga akan mengadakan kontes memakan burger dalam waktu singkat.Peserta akan dibatasi maksimal 30 orang .Peraturannya setiap peserta akan diberikan 10 buah Whopper Burger dan harus dihabiskan dalam waktu yang singkat.Pemenang akan dipilih berdasarkan waktu tersingkat peserta.Juara pertama akan mendapatkan uang senilai 2 juta rupiah,Juara kedua mendapat uang senilai 1 juta rupiah,dan juara ketiga mendapat uang senilai 500 ribu rupiah.Bagi yang berminat dapat segera mendaftar melalui whatsapp atau langsung datang ke restoran kami.Merasa tertarik?? Ayo segera mendaftar dan jangan sampai ketinggalan .</p>
                </article>
                <article>
                     <div></div>
@@ -111,7 +111,7 @@
                </article>
           </section>
           <section>
-               <img src="img/real/burgerContainer(2)(1).png" alt="1">
+               <img src="img/real/event.png" alt="1">
           </section>
      </main>
 
@@ -138,7 +138,7 @@
           <aside>
                <section>
                     <img src="img/icon/logo/logo.png" alt="logo">
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Unde reprehenderit aperiam dignissimos at quo placeat est soluta eos, maxime hic inventore magnam reiciendis non laudantium cupiditate dolor necessitatibus aliquam rerum sit minus dolore! Fugit consectetur minus dolorum repellat corrupti optio quae atque dolor veniam, soluta asperiores adipisci nemo eum illo?</p>
+                    <p>Makan merupakan hal yang sangat mendasar dalam hidup ini.Setiap hari manusia membutuhkan makan untuk memenuhi kebutuhan energinya.Akhirnya kami berpikir bahwa membuka restoran adalah usaha yang akan tetap di perlukan di masyarakat kita ini.Bertambahnya penduduk,semakin ramainya kota-kota besar di seluruh Indonesia sekarang ini menjadi peluang tersendiri bagi usaha restoran.</p>
                </section>
                <section>
                     <div>
