--- a/menu.html
+++ b/menu.html
@@ -248,7 +248,59 @@
                </section>
           </div>
      </main>
-          <!-- GSAP -->
+
+     <main id="container8">
+          <section>
+               <img src="img/icon/acceptCard.png" alt="card">
+               <h4>Terima Kartu</h4>
+               <p>kartu diterima di restoran pengiriman untuk pengiriman.</p>
+          </section>
+          <section>
+               <img src="img/icon/onlineBooking.png" alt="booking">
+               <h4>Booking Online</h4>
+               <p>kami memiliki ruang pada saat kami ingin memesan</p>
+          </section>
+          <section>
+               <img src="img/icon/homeDelivery2.png" alt="homeDelivery2">
+               <h4>Pengiriman Rumah</h4>
+               <p>Anda dipersilakan untuk merasakan kopi yang enak.</p>
+          </section>
+          <section>
+               <img src="img/icon/bestLocation.png" alt="bestLocation">
+               <h4>Lokasi Terbaik</h4>
+               <p>menggunakan sumber lokal kami menyediakan makanan cepat saji yang sehat</p>
+          </section>
+     </main>
+
+     <footer>
+          <aside>
+               <section>
+                    <img src="img/icon/logo/logo.png" alt="logo">
+                    <p>Makan merupakan hal yang sangat mendasar dalam hidup ini.Setiap hari manusia membutuhkan makan untuk memenuhi kebutuhan energinya.Akhirnya kami berpikir bahwa membuka restoran adalah usaha yang akan tetap di perlukan di masyarakat kita ini.Bertambahnya penduduk,semakin ramainya kota-kota besar di seluruh Indonesia sekarang ini menjadi peluang tersendiri bagi usaha restoran.</p>
+               </section>
+               <section>
+                    <div>
+                         <i class="fa fa-map-marker"></i><p>Jakarta, Indonesia</p>
+                    </div>
+                    <div>
+                         <i class="fa fa-envelope"></i><p>renalfrontend@gmail.com</p>
+                    </div>
+               </section>
+          </aside>
+          <aside>
+               <section>
+                    <p>&copy;	REVENILIV 2020 ALL RIGHTS REVERSED</p>
+               </section>
+               <section>
+                    <div><i class="fa fa-instagram"></i></div>
+                    <div><i class="fa fa-facebook-f"></i></div>
+                    <div><i class="fa fa-twitter"></i></div>
+                    <div><i class="fa fa-whatsapp"></i></div>
+               </section>
+          </aside>
+     </footer>
+
+     <!-- GSAP -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
 
     <!-- //ScrollMagic -->
