test, navbar safari bermasalah

--- a/menu.html
+++ b/menu.html
@@ -94,89 +94,6 @@
                     </article>
                </div>
           </section>
-          <section>
-               <div>
-                    <img src="img/menu/10.png" alt="">
-               </div>
-               <div>
-                    <h3><b>Fries</b></h3>
-
-                    <article>
-                         <aside>
-                              <img src="img/icon/star.png" alt="star">
-                              <img src="img/icon/star.png" alt="star">
-                         </aside>
-                         <p>Rp.-20.000</p>
-                    </article>
-               </div>
-          </section>
-          <section>
-               <div>
-                    <img src="img/menu/20.png" alt="">
-               </div>
-               <div>
-                    <h3><b>Double Whopper burger + Cheese</b></h3>
-
-                    <article>
-                         <aside>
-                              <img src="img/icon/star.png" alt="star">
-                              <img src="img/icon/star.png" alt="star">
-                              <img src="img/icon/star.png" alt="star">
-                         </aside>
-                         <p>Rp.-20.000</p>
-                    </article>
-               </div>
-          </section>
-          <section>
-               <div>
-                    <img src="img/menu/3.png" alt="">
-               </div>
-               <div>
-                    <h3><b>Cola-Cola</b></h3>
-
-                    <article>
-                         <aside>
-                              <img src="img/icon/star.png" alt="star">
-                              <img src="img/icon/star.png" alt="star">
-                         </aside>
-                         <p>Rp.-20.000</p>
-                    </article>
-               </div>
-          </section>
-          <section>
-               <div>
-                    <img src="img/menu/13.png" alt="">
-               </div>
-               <div>
-                    <h3><b>hash brown rounds'</b></h3>
-
-                    <article>
-                         <aside>
-                              <img src="img/icon/star.png" alt="star">
-                              <img src="img/icon/star.png" alt="star">
-                              <img src="img/icon/star.png" alt="star">
-                         </aside>
-                         <p>Rp.-20.000</p>
-                    </article>
-               </div>
-          </section>
-          <section>
-               <div>
-                    <img src="img/menu/6.png" alt="">
-               </div>
-               <div>
-                    <h3><b>croissan wich with sausage,cheese,egg</b></h3>
-
-                    <article>
-                         <aside>
-                              <img src="img/icon/star.png" alt="star">
-                              <img src="img/icon/star.png" alt="star">
-                              <img src="img/icon/star.png" alt="star">
-                         </aside>
-                         <p>Rp.-20.000</p>
-                    </article>
-               </div>
-          </section>
      </main>
 
      <main id="container7">
@@ -311,5 +228,6 @@
     <script src="script/script2.js"></script>
     <script src="script/animatePlugin1.js"></script>
     <script src="script/animatePlugin2.js"></script>
+    <script src="script/app.js" type="module"></script>
 </body>
 </html>
