--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="menu.html">Menu</a></li>
-                    <li><a href="">Our Story</a></li>
+                    <li><a href="story.html">Our Story</a></li>
                     <li><a href="">Login</a></li>
                </ul>
      
