--- a/menu.html
+++ b/menu.html
@@ -25,7 +25,7 @@
                <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="menu.html">Menu</a></li>
-                    <li><a href="">Our Story</a></li>
+                    <li><a href="story.html">Our Story</a></li>
                     <li><a href="">Sign Up</a></li>
                </ul>
 
