Done halaman our story 100%

--- a/story.html
+++ b/story.html
@@ -84,7 +84,56 @@
           </section>
      </div>
 
-     
+     <div id="containerV3_2">
+          <h1>Pengembang</h1>
+          <aside>
+               <section>
+                    <img src="img/developer/1.png" alt="1">
+                    <p>Fullstack Javascript</p>
+               </section>
+               <section>
+                    <img src="img/developer/2.png" alt="2">
+                    <p>UI/UX Designer</p>
+               </section>
+               <section>
+                    <img src="img/developer/1.png" alt="1">
+                    <p>Content Writer</p>
+               </section>
+               <section>
+                    <img src="img/developer/2.png" alt="2">
+                    <p>Back end Developer</p>
+               </section>
+          </aside>
+     </div>
+
+     <footer>
+          <aside>
+               <section>
+                    <img src="img/icon/logo/logo.png" alt="logo">
+                    <p>Makan merupakan hal yang sangat mendasar dalam hidup ini.Setiap hari manusia membutuhkan makan untuk memenuhi kebutuhan energinya.Akhirnya kami berpikir bahwa membuka restoran adalah usaha yang akan tetap di perlukan di masyarakat kita ini.Bertambahnya penduduk,semakin ramainya kota-kota besar di seluruh Indonesia sekarang ini menjadi peluang tersendiri bagi usaha restoran.</p>
+               </section>
+               <section>
+                    <div>
+                         <i class="fa fa-map-marker"></i><p>Jakarta, Indonesia</p>
+                    </div>
+                    <div>
+                         <i class="fa fa-envelope"></i><p>renalfrontend@gmail.com</p>
+                    </div>
+               </section>
+          </aside>
+          <aside>
+               <section>
+                    <p>&copy;	REVENILIV 2020 ALL RIGHTS REVERSED</p>
+               </section>
+               <section>
+                    <div><i class="fa fa-instagram"></i></div>
+                    <div><i class="fa fa-facebook-f"></i></div>
+                    <div><i class="fa fa-twitter"></i></div>
+                    <div><i class="fa fa-whatsapp"></i></div>
+               </section>
+          </aside>
+     </footer>
+
 
      <!-- GSAP -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
