Clear, tinggal halaman login

--- a/story.html
+++ b/story.html
@@ -85,22 +85,26 @@
      </div>
 
      <div id="containerV3_2">
-          <h1>Pengembang</h1>
+          <h1>DEVELOPER TEAM</h1>
           <aside>
                <section>
                     <img src="img/developer/1.png" alt="1">
+                    <h2>Reynaldy</h2>
                     <p>Fullstack Javascript</p>
                </section>
                <section>
                     <img src="img/developer/2.png" alt="2">
+                    <h2>Verdianto</h2>
                     <p>UI/UX Designer</p>
                </section>
                <section>
                     <img src="img/developer/1.png" alt="1">
+                    <h2>Olivia</h2>
                     <p>Content Writer</p>
                </section>
                <section>
                     <img src="img/developer/2.png" alt="2">
+                    <h2>Dennis</h2>
                     <p>Back end Developer</p>
                </section>
           </aside>
