PROJECT WEB SELESAI

--- a/menu.html
+++ b/menu.html
@@ -26,7 +26,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="menu.html">Menu</a></li>
                     <li><a href="story.html">Our Story</a></li>
-                    <li><a href="">Sign Up</a></li>
+                    <li><a href="login.html">Login</a></li>
                </ul>
 
                <!-- Hamburger menu -->
@@ -149,14 +149,14 @@
                                    </article>
                                    <article>
                                         <img src="img/icon/soda2.png" alt="drink">
-                                        <p>2 Drink</p>
+                                        <p>1 Drink</p>
                                    </article>
                                    <article>
                                         <img src="img/icon/fries2.png" alt="fries2">
-                                        <p>1 Friench</p>
+                                        <p>2 Friench</p>
                                    </article>
                               </div>
-                              <h4>Total : <span> Rp,-50.000 </span></h4>
+                              <h4>Total : <span> Rp,-72.000 </span></h4>
                          </aside>  
                          <img src="img/menu/specialDeals1.png" alt="specialDeal1">
                     </article>
