--- a/story.html
+++ b/story.html
@@ -8,6 +8,7 @@
      <link rel="stylesheet" href="style/desktop3.css">
      <link rel="stylesheet" href="style/mobile1.css">
      <link rel="stylesheet" href="style/mobile3.css">
+     <link rel="shortcut icon" href="img/icon/logo/logo.png">
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
@@ -23,7 +24,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="menu.html">Menu</a></li>
                     <li><a href="story.html">Our Story</a></li>
-                    <li><a href="">Login</a></li>
+                    <li><a href="login.html">Login</a></li>
                </ul>
      
                <!-- Hamburger menu -->
