--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="menu.html">Menu</a></li>
                     <li><a href="story.html">Our Story</a></li>
-                    <li><a href="">Login</a></li>
+                    <li><a href="login.html">Login</a></li>
                </ul>
      
                <!-- Hamburger menu -->
