PROJECT WEB SELESAI...

--- a/story.html
+++ b/story.html
@@ -99,14 +99,14 @@
                     <p>UI/UX Designer</p>
                </section>
                <section>
-                    <img src="img/developer/1.png" alt="1">
+                    <img src="img/developer/3.png" alt="3">
                     <h2>Olivia</h2>
                     <p>Content Writer</p>
                </section>
                <section>
-                    <img src="img/developer/2.png" alt="2">
+                    <img src="img/developer/4.png" alt="4">
                     <h2>Dennis</h2>
-                    <p>Back end Developer</p>
+                    <p>Front end Developer</p>
                </section>
           </aside>
      </div>
