Commit folder useInfinityQuery PROGRESS

--- a/story.html
+++ b/story.html
@@ -3,7 +3,7 @@
 <head>
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <title>Home</title>
+     <title>Our Story</title>
      <link rel="stylesheet" href="style/desktop1.css">
      <link rel="stylesheet" href="style/desktop3.css">
      <link rel="stylesheet" href="style/mobile1.css">
